created [GET] / regenerated swagger docs
