# docs/swagger.json
@@ -13,15 +13,23 @@
                     "application/json"
                 ],
                 "summary": "Returns a list of wallets.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "default:10",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "default:0",
+                        "name": "cursor",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIReturn"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/models.APIReturn"
                         }
@@ -54,22 +62,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "202": {
+                        "description": "Accepted",
                         "schema": {
                             "$ref": "#/definitions/models.APIEventReturn"
-                        }
-                    },
-                    "207": {
-                        "description": "Multi-Status",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIEventReturn"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIReturn"
                         }
                     },
                     "500": {
@@ -86,23 +82,11 @@
         "models.APIEventReturn": {
             "type": "object",
             "properties": {
-                "responseTime": {
-                    "type": "integer"
+                "data": {
+                    "$ref": "#/definitions/models.Event"
                 },
-                "statusCode": {
-                    "type": "integer"
-                },
-                "success": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Event"
-                    }
-                },
-                "unsuccess": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Event"
-                    }
+                "result": {
+                    "$ref": "#/definitions/models.EventResult"
                 }
             }
         },
@@ -120,17 +104,6 @@
                 }
             }
         },
-        "models.Attributes": {
-            "type": "object",
-            "properties": {
-                "amount": {
-                    "type": "string"
-                },
-                "currency": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Event": {
             "type": "object",
             "properties": {
@@ -138,10 +111,10 @@
                     "type": "string"
                 },
                 "attributes": {
-                    "$ref": "#/definitions/models.Attributes"
+                    "$ref": "#/definitions/models.EventAttributes"
                 },
                 "meta": {
-                    "$ref": "#/definitions/models.Meta"
+                    "$ref": "#/definitions/models.EventMeta"
                 },
                 "time": {
                     "type": "string"
@@ -150,6 +123,17 @@
                     "type": "string"
                 },
                 "wallet": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.EventAttributes": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "string"
+                },
+                "currency": {
                     "type": "string"
                 }
             }
@@ -165,11 +149,22 @@
                 }
             }
         },
-        "models.Meta": {
+        "models.EventMeta": {
             "type": "object",
             "properties": {
                 "user": {
                     "type": "string"
+                }
+            }
+        },
+        "models.EventResult": {
+            "type": "object",
+            "properties": {
+                "errorDetails": {
+                    "type": "string"
+                },
+                "statusCode": {
+                    "type": "integer"
                 }
             }
         }
